<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#efefef">
    <com.yunshu.widget.NavBarView
        android:id="@+id/navbar_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        custom:navBarHasBack="false"
        custom:navBarTitle="用户登陆"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:background="@drawable/input_bg">
        <com.yunshu.widget.IconInput
            android:id="@+id/icon_input_login_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            custom:iconInputIcon="@drawable/icon_username"
            custom:iconInputDesc="@string/text_login_username"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="#ffcccccc"/>
        <com.yunshu.widget.IconInput
            android:id="@+id/icon_input_login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            custom:iconInputType="password"
            custom:iconInputIcon="@drawable/icon_password"
            custom:iconInputDesc="@string/text_login_password"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:orientation="horizontal"
        android:baselineAligned="false">

        <com.yunshu.widget.SolidButton
            android:id="@+id/button_login"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="41dp"
            android:textSize="15sp"
            android:layout_marginRight="10dp"
            android:textColor="@drawable/selector_button_solid_text_blue"
            android:background="@drawable/selector_button_solid_bg_blue"
            android:text="@string/text_button_loginon"/>

        <com.yunshu.widget.LineButton
            android:id="@+id/button_exit"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="41dp"
            android:layout_marginLeft="10dp"
            android:textSize="15sp"
            android:textColor="@drawable/selector_button_line_text_blue"
            android:background="@drawable/selector_button_line_bg_blue"
            android:text="@string/text_button_exit"/>
    </LinearLayout>
</LinearLayout>