<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <fragment
        android:id="@+id/fragment_home"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        class="com.yunshu.erp.fragment.HomeFragment"/>
    <fragment
        android:id="@+id/fragment_message"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        class="com.yunshu.erp.fragment.MessageFragment"/>
    <fragment
        android:id="@+id/fragment_my"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        class="com.yunshu.erp.fragment.MyFragment"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="#d3d3d3"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#fdffffff"
        android:gravity="center"
        android:orientation="horizontal">
        <com.yunshu.widget.MenuButton
            android:id="@+id/menu_button_home"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            custom:menuButtonIndex="0"
            custom:menuButtonDefault="@drawable/icon_menu_home"
            custom:menuButtonSelected="@drawable/icon_menu_home_selected"
            custom:menuButtonText="@string/text_menu_home"/>
        <com.yunshu.widget.MenuButton
            android:id="@+id/menu_button_message"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            custom:menuButtonIndex="1"
            custom:menuButtonDefault="@drawable/icon_menu_message"
            custom:menuButtonSelected="@drawable/icon_menu_message_selected"
            custom:menuButtonText="@string/text_menu_message"/>
        <com.yunshu.widget.MenuButton
            android:id="@+id/menu_button_my"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            custom:menuButtonIndex="2"
            custom:menuButtonDefault="@drawable/icon_menu_my"
            custom:menuButtonSelected="@drawable/icon_menu_my_selected"
            custom:menuButtonText="@string/text_menu_my"/>
    </LinearLayout>
</LinearLayout>
